# ix_ansible

./: .gitignore  Dockerfile  README.md  ansible.cfg  pyproject.toml  run.yml
ansible_collections/rucdev/ix/: README.md  galaxy.yml
ansible_collections/rucdev/ix/docs/: rucdev.ix.ix_command_module.rst  rucdev.ix.ix_config_module.rst
ansible_collections/rucdev/ix/docs/docs/: rucdev.ix.ix_cliconf.rst
ansible_collections/rucdev/ix/meta/: runtime.yml
ansible_collections/rucdev/ix/plugins/action/: ix.py  ix_config.py
ansible_collections/rucdev/ix/plugins/cliconf/: ix.py
ansible_collections/rucdev/ix/plugins/modules/: ix_command.py  ix_config.py  ix_device_interfaces.py  ix_facts.py  ix_interfaces.py  ix_l3_interfaces.py  ix_ntp.py  ix_ospf_interfaces.py  ix_ospfv2.py  ix_ospfv3.py  ix_static_routes.py
ansible_collections/rucdev/ix/plugins/terminal/: ix.py
ansible_collections/rucdev/ix/tests/output/bot/: ansible-test-sanity-action-plugin-docs.json  ansible-test-sanity-ansible-doc.json  ansible-test-sanity-compile-python-2.7.json  ansible-test-sanity-future-import-boilerplate.json  ansible-test-sanity-import-python-3.10.json  ansible-test-sanity-import-python-3.8.json  ansible-test-sanity-metaclass-boilerplate.json  ansible-test-sanity-pep8.json  ansible-test-sanity-pylint.json  ansible-test-sanity-shebang.json  ansible-test-sanity-validate-modules.json
collections/ansible_collections/rucdev/ix/: README.md  galaxy.yml
debugs/: tasks_executor_variables.json
playbook/: inventory.ini  smp.yaml
(+43 files in other folders)
