[tool.poetry]
name = "ix_ansible"
version = "0.1.0"
description = "ansible module for NEC ix."
authors = ["uc_dev <atrantic0314@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ansible = "6.4.0"
paramiko = "^2.11.0"
ansible-pylibssh = "^1.0.0"
tox = "^4.11.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
