[project]
name = "ix_ansible"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
description = "ansible module for NEC ix."
dependencies = [
    "ansible == 6.4.0",
    "paramiko >= 2.11.0",
    "ansible-pylibssh >= 1.0.0",
    "tox >= 4.11.3",
    "setuptools>=75.6.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.7.0",
]
